--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     ]
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-leaflet": "^3.1.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.20",
+    "@types/leaflet": "^1.7.0",
     "@types/node": "^14.14.33",
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.9",
