chore: update travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ node_js:
 cache:
   directories:
     - "node_modules"
+
+deploy:
+  provider: s3
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+  bucket: my-trips
+  skip_cleanup: true
+  local_dir: .next
