--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: node_js
 node_js:
   - 14
+
 cache:
   directories:
     - "node_modules"
+
+ script:
+  - yarn test
+  - yarn build
 
 deploy:
   provider: s3
@@ -12,3 +17,5 @@ deploy:
   bucket: my-trips
   skip_cleanup: true
   local_dir: .next
+  on:
+    branch: main
