--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ deploy:
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
   bucket: my-trips
+  region: sa-east-1
   skip_cleanup: true
   local_dir: .next
   on:
