--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "eslint src --max-warnings=0",
     "test": "jest",
     "test:watch": "jest --watchAll",
