--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphql-request": "^3.4.0",
     "leaflet": "^1.7.1",
     "next": "10.0.8",
+    "nextjs-progressbar": "^0.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-leaflet": "^3.1.0",
